<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/background_screen"
    android:elevation="4dp"
    android:layout_margin="10dp">

<!--    Name -->
    <TextView
        android:id="@+id/_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:text="@string/name_"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/s_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:hint="@string/name_" />

<!--  Father name  -->
    <TextView
        android:id="@+id/_father_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/s_name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/father_name"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/s_father_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/_father_name"
        android:layout_below="@id/s_name"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:hint="@string/name_" />

<!--    Class -->
    <TextView
        android:id="@+id/_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/_father_name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/_class"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/s_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/_roll_no"
        android:layout_below="@id/s_father_name"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:hint="@string/clazz" />


<!--    Roll Number-->
    <TextView
        android:id="@+id/_roll_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/_class"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/roll_no_"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/s_roll_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/_roll_no"
        android:layout_below="@id/s_class"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:hint="@string/roll_no" />

<!--    Id-->
    <TextView
        android:id="@+id/_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/_roll_no"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/s_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/_id"
        android:layout_below="@id/s_roll_no"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:hint="@string/id" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/s_id">

    <TextView
        android:id="@+id/fullDetails"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/full_details"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/background_screen"
        android:padding="3dp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        />

    <ImageView
        android:id="@+id/deleteStudent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/delete"
        android:elevation="2dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_delete_24" />

    </LinearLayout>

</RelativeLayout>