<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <!-- Main Content Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#7CA2C7"
            android:gravity="center"
            android:elevation="4dp">


            <ImageView
                android:id="@+id/menubtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/menu_button"
                android:foregroundGravity="center"
                android:src="@drawable/baseline_menu_24" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/signOutBtn"
                android:layout_toEndOf="@id/menubtn"
                android:gravity="center"
                android:text="@string/schoolapp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Sign Out Button -->
            <Button
                android:id="@+id/signOutBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/sign_out"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <androidx.fragment.app.FragmentContainerView

            android:name="com.first.schoolapp.freagments.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"

            />

    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        app:headerLayout="@layout/menu_header"
        android:fitsSystemWindows="true" />
</androidx.drawerlayout.widget.DrawerLayout>
